# fhe-algorithms

./: .gitignore  CMakeLists.txt  README.md  config.yaml  run.sh  tree.dot
bench/: CMakeLists.txt  main.cpp
bench/matvec/: bench.cpp  matvec_ring_bench.csv  plot.py  plot.sh
bench/polyeval/: bench.cpp  plot.py  plot.sh  polyeval_ring_bench.csv
docker-files/: Dockerfile  docker-compose.yaml
examples/: CMakeLists.txt  example.cpp  matvec_demo.cpp  polyeval_demo.cpp
src/: CMakeLists.txt  context.cpp  context.h  context1.cpp  context1.h  matvec.cpp  matvec.h  poly_eval.cpp  poly_eval.h
src/utils/: CMakeLists.txt  config_loader.cpp  config_loader.h  config_loader1.cpp  config_loader1.h  fhe_nn.cpp  fhe_nn.h  helper_utils.cpp  helper_utils.h  scheme_defs.h  serialization_utils.cpp  serialization_utils.h
